2005-12-28  Sven Panne  <sven.panne@aedion.de>

	* src/arch/alsa/alsa.c, src/arch/i386/x86_cpu_caps_prk.c: _alDebug
	already adds newlines.

2005-12-27  Sven Panne  <sven.panne@aedion.de>

	* src/arch/alsa/alsa.c: Always use "_near" variants of
	snd_pcm_hw_params_set_period_size and snd_pcm_hw_params_set_rate, this
	should fix problems for some soundcards (thanks to Shawn Kirst for
	pointing this out). Removed some unused variables. Fixed two warnings.

2005-12-21  Prakash Punnoor <prakash@punnoor.de>

	* arch/i386/Makefile.am: added; kludge for autotools vs. nasm
	
	* configure.ac, src/Makefile.am: finally nasm compilation (based on
	LAME's way); quite a kludge, but autotools suck hard, better ways
	welcome...

2005-12-22  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, Makefile.am, admin/RPM/openal.spec, config-osx.h,
	configure.ac, src/Makefile.am, src/al_buffer.c, src/al_main.c,
	src/extensions/al_ext_mp3.c, src/extensions/al_ext_mp3.h,
	src/extensions/al_ext_vorbis.c, src/extensions/al_ext_vorbis.h:
	Autodetect Vorbis and MP3 extenstions.

2005-12-21  Prakash Punnoor <prakash@punnoor.de>

	* arch/i386/x86_floatmul.c: added; renamed i386 floatmul
	
	* CMakeLists.txt: renamed i386 floatmul
	
	* configure.ac, src/Makefile.am: MMX support back in; NASM compilation
	rule missing, so beware that cpu caps detection is missing; deactivate
	NASM for the meanwhile
	
	* arch/i386/floatmul.c, arch/i386/mix16.nasm: removed
	
2005-12-21  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am, configure.ac, src/Makefile.am, src/arch/bsd/bsd_dsp.c,
	src/arch/darwin/darwin_native.c, src/arch/interface/platform.h,
	src/arch/irix/iris.c, src/arch/linux/lin_dsp.c,
	src/arch/morphos/morphos_dispatcher.c,
	src/arch/morphos/morphos_native.c, src/arch/solaris/solaris_native.c,
	src/arch/windows/windows_native.c: Unified all the headers for native
	backends. Backend auto-detection should be complete now (modulo some
	testing, of course).
